plugins {
    id 'java'
}

group 'LockFreeSet'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.0'
    implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'org.jetbrains.kotlinx:lincheck-jvm:2.23'
}

tasks.withType(Test, {
        jvmArgs(
                "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
                "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
                "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
        )
    }
)
